--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,22 +35,22 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-success text-lg-center">
+    <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">NotasVenta</a>
+            <a class="navbar-brand" href="/">NotasVenta</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link fw-bold text-dark" href="/productos/create">Productos</a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link fw-bold text-dark" href="/vendedores/create">Vendedores</a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link fw-bold text-dark" href="/clientes/create">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -63,12 +63,17 @@
                             <li><a class="dropdown-item" href="/notasVentas/listar">Listar todas</a></li>
                         </ul>
                     </li>
-
                 </ul>
             </div>
+            <!-- Botón de salir alineado a la derecha -->
+            <form class="d-flex ms-auto" sec:authorize="isAuthenticated()" method="post" action="/logout">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <button type="submit" class="btn btn-danger">Salir</button>
+            </form>
         </div>
     </nav>
-
+    
+    
     <div class="container custom-container my-4"> <!-- Añadimos la clase personalizada -->
         <div class="row">
 
