--- a/src/main/resources/templates/admin/listaNotasVentas.html
+++ b/src/main/resources/templates/admin/listaNotasVentas.html
@@ -13,49 +13,51 @@
         .table-row {
             cursor: pointer;
         }
+
+        img {
+            width: 35px;
+            height: 21px;
+        }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-success text-lg-center">
+    <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">NotasVenta</a>
+            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png" alt="Logo"><Strong>NotasVentas</Strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse justify-content-center me-5" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/productos/create">Productos</a>
-                      </li>
-                      <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/vendedores/create">Vendedores</a>
-                      </li>
-                      <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/clientes/create">Clientes</a>
-                      </li>
+                        <a class="nav-link  fs-5 fw-bold text-dark" href="/admin/notasVentas">Notas de Venta</a>
+                    </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-dark" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Notas de Venta
+                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Vendedores
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/notasVentas/crearNotaVenta">Crear</a></li>
-                            <li><a class="dropdown-item" href="/notasVentas/listar">Listar todas</a></li>
+                        <ul class="dropdown-menu bg-dark-subtle  ">
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores/crear">Crear</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/admin/vendedores">Listar</a></li>
                         </ul>
                     </li>
-                   
+
                 </ul>
             </div>
+            <form class="d-flex me-3" sec:authorize="isAuthenticated()" method="post" th:action="@{/logout}">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <button type="submit" class="btn btn-danger fw-semibold text-light">Salir</button>
+            </form>
         </div>
     </nav>
     <div class="container mt-4">
-        <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-success">Listado de Notas de Venta</h2>
+        <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Listado de Notas de Venta</h2>
         <table class="table table-hover table-bordered">
-            <thead class="table-success">
-                <tr>
-                    <th>ID</th>
+            <thead class="table table-warning">
+                <tr class="text-center text-bordered">
                     <th>Cliente</th>
                     <th>Vendedor</th>
                     <th>Fecha de Creación</th>
@@ -65,19 +67,19 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr th:each="notaVenta : ${notasVenta}"  class="table-row" th:data-id="${notaVenta.id}">
-                    <td th:text="${notaVenta.id}"></td>
+            <tbody class="text-center">
+                <tr th:each="notaVenta : ${notasVenta}" class="table-row" th:data-id="${notaVenta.id}">
                     <td th:text="${notaVenta.cliente.cuentaCorriente}"></td>
                     <td th:text="${notaVenta.vendedor.nombre}"></td>
                     <td th:text="${notaVenta.fechaCreacion}"></td>
                     <td th:text="${notaVenta.vencimiento}"></td>
                     <td th:text="${notaVenta.totalUSD}"></td>
                     <td th:text="${notaVenta.totalARS}"></td>
-                    
-                    <td>
+
+                    <td class="text-center">
                         <!-- Botón de Eliminar -->
-                        <form th:action="@{/notasVentas/delete/{id}(id=${notaVenta.id})}" method="post" style="display:inline-block">
+                        <form th:action="@{/admin/notasVentas/eliminar/{id}(id=${notaVenta.id})}" method="post"
+                            style="display:inline-block">
                             <button type="submit" class="btn btn-danger btn-sm">Eliminar</button>
                         </form>
                     </td>
@@ -93,7 +95,7 @@
         // Redirigir al detalle de la Nota de Venta al hacer clic en la fila
         $(document).on('click', '.table-row', function () {
             var notaVentaId = $(this).data('id');
-            window.location.href = '/notasVentas/detalle/' + notaVentaId; // Redirige al detalle
+            window.location.href = '/admin/notasVentas/detalle/' + notaVentaId; // Redirige al detalle
         });
     </script>
 </body>
