--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,24 +10,24 @@
         <div class="col-md-4">
             <div class="card mt-5">
                 <div class="card-header text-center">
-                    <h3>Login</h3>
+                    <h2 class="col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Login</h2>
                 </div>
                 <div class="card-body">
                     <form th:action="@{/login}" method="post">
                         <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+                            <label for="username">Nombre de Usuario</label>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Ingrese su usuario" required>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+                            <label for="password">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Login</button>
                     </form>
                 </div>
                 <div class="card-footer text-center">
-                    <p th:if="${param.error}">Invalid username or password!</p>
-                    <p th:if="${param.logout}">You have been logged out.</p>
+                    <p th:if="${param.error}">Usuario o contraseña no validos!</p>
+                    <p th:if="${param.logout}"></p>
                 </div>
             </div>
         </div>
