--- a/src/main/resources/templates/vendedores/DetalleNotaVentaVendedor.html
+++ b/src/main/resources/templates/vendedores/DetalleNotaVentaVendedor.html
@@ -1,54 +1,74 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Detalle de Nota de Venta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        img {
+            width: 35px;
+            height: 21px;
+        }
+    </style>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-success">
+    <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">NotasVenta</a>
+            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png"
+                    alt="Logo"><Strong>NotasVentas</Strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse justify-content-center me-5 pe-5" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/productos/create">Productos</a>
-                      </li>
-                      <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/vendedores/create">Vendedores</a>
-                      </li>
-                      <li class="nav-item ">
-                        <a class="nav-link fw-bold text-dark" href="/clientes/create">Clientes</a>
-                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5 fw-bold text-dark" href="/productos/create">Productos</a>
+                    </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-dark" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Notas de Venta
+                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Clientes
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/notasVentas/crearNotaVenta">Crear</a></li>
-                            <li><a class="dropdown-item" href="/notasVentas/listar">Listar todas</a></li>
+                        <ul class="dropdown-menu bg-dark-subtle">
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark"
+                                    href="/vendedor/clientes/crear">Nuevo</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/clientes">Listar</a>
+                            </li>
                         </ul>
                     </li>
-                   
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Notas de Venta
+                        </a>
+                        <ul class="dropdown-menu bg-dark-subtle">
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark"
+                                    href="/vendedor/notasVentas/crear">Nuevo</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/notasVentas">Listar</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
+            <!-- Botón de salir alineado a la derecha -->
+            <form class="d-flex ms-auto me-3" sec:authorize="isAuthenticated()" method="post" action="/logout">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <button type="submit" class="btn btn-danger fw-semibold text-light">Salir</button>
+            </form>
         </div>
     </nav>
-    
+
     <div class="container my-5">
         <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-success">Detalles de la Nota de Venta</h2>
-        
+
         <!-- Información de la Nota de Venta -->
         <table class="table table-bordered">
             <thead class="table-success">
                 <tr>
-                    <th>Cliente (Cuenta Corriente)</th>
-                    <th>Vendedor</th>
+                    <th>Cliente</th>
                     <th>Fecha de Creación</th>
                     <th>Fecha de Vencimiento</th>
                     <th>Comprobante</th>
@@ -64,7 +84,6 @@
             <tbody>
                 <tr>
                     <td th:text="${notaVenta.cliente.cuentaCorriente}"></td>
-                    <td th:text="${notaVenta.vendedor.nombre}"></td>
                     <td th:text="${notaVenta.fechaCreacion}"></td>
                     <td th:text="${notaVenta.vencimiento}"></td>
                     <td th:text="${notaVenta.comprobante}"></td>
@@ -109,11 +128,12 @@
 
         <!-- Botón para regresar -->
         <div class="mt-4 text-center">
-            <a href="/notasVentas/listar" class="btn btn-secondary">Volver</a>
+            <a href="/vendedor/notasVentas" class="btn btn-secondary">Volver</a>
         </div>
     </div>
 
     <!-- Librerías de JavaScript para Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
