--- a/src/main/resources/templates/vendedores/notaVentaForm.html
+++ b/src/main/resources/templates/vendedores/notaVentaForm.html
@@ -14,9 +14,9 @@
             /* Centrar el contenedor horizontalmente */
         }
 
-        .logo {
-            max-height: 50px;
-            max-width: 300px;
+        img {
+            width: 35px;
+            height: 21px;
         }
 
 
@@ -34,61 +34,69 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-success">
+    <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">NotasVenta</a>
+            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png"
+                    alt="Logo"><Strong>NotasVentas</Strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse justify-content-center me-5 pe-5" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-dark" href="/productos/create">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-dark" href="/vendedores/create">Vendedores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-bold text-dark" href="/clientes/create">Clientes</a>
+                        <a class="nav-link fs-5 fw-bold text-dark" href="/productos/create">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fw-bold text-dark" href="#" role="button"
+                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Clientes
+                        </a>
+                        <ul class="dropdown-menu bg-dark-subtle">
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark"
+                                    href="/vendedor/clientes/crear">Nuevo</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/clientes">Listar</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Notas de Venta
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/notasVentas/crearNotaVenta">Crear</a></li>
-                            <li><a class="dropdown-item" href="/notasVentas/listar">Listar todas</a></li>
+                        <ul class="dropdown-menu bg-dark-subtle">
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark"
+                                    href="/vendedor/notasVentas/crear">Nuevo</a></li>
+                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/notasVentas">Listar</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <!-- Botón de salir alineado a la derecha -->
-            <form class="d-flex ms-auto" sec:authorize="isAuthenticated()" method="post" action="/logout">
+            <form class="d-flex ms-auto me-3" sec:authorize="isAuthenticated()" method="post" action="/logout">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <button type="submit" class="btn btn-danger">Salir</button>
+                <button type="submit" class="btn btn-danger fw-semibold text-light">Salir</button>
             </form>
         </div>
     </nav>
-    
-    
+
+
     <div class="container custom-container my-4"> <!-- Añadimos la clase personalizada -->
-        <div class="row">
+        <div class="row mb-4">
 
             <!--<img th:src="@{/images/LogoAgromatorrales.png}" alt="Descripción de la imagen" class="col-2 my-4 logo">-->
-            <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-success">Registrar Nota de Venta</h2>
+            <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Registrar Nota de Venta</h2>
             <!-- Centramos el título -->
         </div>
-        <form th:action="@{/notasVentas/save}" th:object="${notaVenta}" method="post" class="needs-validation"
-            novalidate>
+        <form th:action="@{/vendedor/notasVentas/guardar}" th:object="${notaVenta}" method="post"
+            class="needs-validation" novalidate>
             <div class="row mb-2">
                 <!-- Selección de Cliente -->
                 <div class="col-12 col-md-3 mb-2">
                     <label for="cliente" class="form-label fw-bolder">Cliente</label>
                     <select class="form-select" id="cliente" th:field="*{cliente.id}" minlength="1" required>
-                        <option value="" ></option>
+                        <option value=""></option>
                         <option th:each="cliente : ${clientes}" th:value="${cliente.id}"
                             th:text="${cliente.cuentaCorriente}">
                         </option>
@@ -99,7 +107,7 @@
                 <div class="col-12 col-md-3 mb-2">
                     <label for="comprobante" class="form-label fw-bolder">Comprobante</label>
                     <select class="form-select" id="comprobante" th:field="*{comprobante}" minlength="1" required>
-                        <option value="" ></option>
+                        <option value=""></option>
                         <option value="FACTURA">Factura</option>
                         <option value="NOTADEBITO">Nota de Débito</option>
                         <option value="NOTACREDITO">Nota de Crédito</option>
@@ -174,7 +182,7 @@
                     </div>
                 </div>
 
-                <!-- Selección de Vendedor -->
+                <!-- Selección de Vendedor 
                 <div class="col-12 col-md-3 mb-2">
                     <label for="vendedor" class="form-label fw-bolder">Vendedor</label>
                     <select class="form-select" id="vendedor" th:field="*{vendedor.id}" minlength="1" required>
@@ -188,35 +196,38 @@
                     </div>
                 </div>
             </div>
+            -->
+
+                <!-- Buscador de productos -->
+                <div class="mb-3">
+                    <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
+                    <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
+                    <div id="resultadosBusqueda" class="list-group mt-2"></div>
+                </div>
+
+                <!-- Tabla de productos seleccionados -->
+                <div class="table-responsive mb-3">
+                    <label for="productos" class="form-label fw-bolder">Productos seleccionados</label>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Producto</th>
+                                <th>Precio Costo</th>
+                                <th>Cantidad L/KG</th>
+                                <th>Ganancia %</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody id="productosSeleccionados">
+                            <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
+                        </tbody>
+                    </table>
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-lg col-1">Guardar</button>
 
 
-            <!-- Buscador de productos -->
-            <div class="mb-3">
-                <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
-                <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
-                <div id="resultadosBusqueda" class="list-group mt-2"></div>
-            </div>
 
-            <!-- Tabla de productos seleccionados -->
-            <div class="table-responsive mb-3">
-                <label for="productos" class="form-label fw-bolder">Productos seleccionados</label>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Producto</th>
-                            <th>Precio Costo</th>
-                            <th>Cantidad L/KG</th>
-                            <th>Ganancia %</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody id="productosSeleccionados">
-                        <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
-                    </tbody>
-                </table>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Guardar Nota de Venta</button>
         </form>
     </div>
 
