--- a/src/main/resources/templates/vendedores/notaVentaForm.html
+++ b/src/main/resources/templates/vendedores/notaVentaForm.html
@@ -86,25 +86,26 @@
         <div class="row mb-4">
 
             <!--<img th:src="@{/images/LogoAgromatorrales.png}" alt="Descripción de la imagen" class="col-2 my-4 logo">-->
-            <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Registrar Nota de Venta</h2>
+            <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Registrar Nota de Venta
+            </h2>
             <!-- Centramos el título -->
         </div>
         <form th:action="@{/vendedor/notasVentas/guardar}" th:object="${notaVenta}" method="post"
             class="needs-validation" novalidate>
             <div class="row mb-2">
-                <!-- Selección de Cliente -->
-                <div class="col-12 col-md-3 mb-2">
-                    <label for="cliente" class="form-label fw-bolder">Cliente</label>
-                    <select class="form-select" id="cliente" th:field="*{cliente.id}" minlength="1" required>
-                        <option value=""></option>
-                        <option th:each="cliente : ${clientes}" th:value="${cliente.id}"
-                            th:text="${cliente.cuentaCorriente}">
-                        </option>
-                    </select>
+
+                <!-- Fecha de vencimiento -->
+                <div class="col-12 col-md-2 mb-2">
+                    <label for="vencimiento" class="form-label fw-bolder">Fecha de Vencimiento</label>
+                    <input type="date" class="form-control" id="vencimiento" th:field="*{vencimiento}"
+                        th:min="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
+                    <div class="invalid-feedback">
+                        Es necesaria una fecha de vencimiento
+                    </div>
                 </div>
 
                 <!-- Comprobante-->
-                <div class="col-12 col-md-3 mb-2">
+                <div class="col-12 col-md-2 mb-2">
                     <label for="comprobante" class="form-label fw-bolder">Comprobante</label>
                     <select class="form-select" id="comprobante" th:field="*{comprobante}" minlength="1" required>
                         <option value=""></option>
@@ -118,34 +119,8 @@
                     </div>
                 </div>
 
-
-
-                <!-- Fecha de vencimiento -->
-                <div class="col-12 col-md-3 mb-2">
-                    <label for="vencimiento" class="form-label fw-bolder">Fecha de Vencimiento</label>
-                    <input type="date" class="form-control" id="vencimiento" th:field="*{vencimiento}"
-                        th:min="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
-                    <div class="invalid-feedback">
-                        Es necesaria una fecha de vencimiento
-                    </div>
-                </div>
-
-                <!-- Tipo de cambio -->
-                <div class="col-12 col-md-3 mb-2">
-                    <label for="tipoCambio" class="form-label fw-bolder">Tipo de Cambio</label>
-                    <input type="number" step="0.01" class="form-control" id="tipoCambio" th:field="*{tipoCambio}"
-                        required>
-                    <div class="invalid-feedback">
-                        Es necesario un tipo de cambio
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="row mb-2">
-
                 <!-- Forma de pago -->
-                <div class="col-12 col-md-3 mb-2">
+                <div class="col-12 col-md-2 mb-2">
                     <label for="formaDePago" class="form-label fw-bolder">Forma de Pago</label>
                     <select class="form-select" id="formaDePago" th:field="*{formaDePago}" minlength="1" required>
                         <option value=""></option>
@@ -157,10 +132,10 @@
                     <div class="invalid-feedback">
                         Es necesario un tipo de cambio
                     </div>
-
                 </div>
+
                 <!-- IVA -->
-                <div class="col-12 col-md-3 mb-2">
+                <div class="col-12 col-md-2 mb-2">
                     <label for="iva" class="form-label fw-bolder">IVA</label>
                     <select class="form-select" id="iva" th:field="*{IVA}" minlength="1" required>
                         <option value=""></option>
@@ -172,8 +147,9 @@
                         Es necesario un IVA
                     </div>
                 </div>
+
                 <!-- Interés Mensual -->
-                <div class="col-12 col-md-3 mb-2">
+                <div class="col-12 col-md-2 mb-2">
                     <label for="interesMensual" class="form-label fw-bolder">Interés Mensual %</label>
                     <input type="number" step="0.01" class="form-control" id="interesMensual"
                         th:field="*{interesMensual}" required>
@@ -182,49 +158,66 @@
                     </div>
                 </div>
 
-                <!-- Selección de Vendedor 
-                <div class="col-12 col-md-3 mb-2">
-                    <label for="vendedor" class="form-label fw-bolder">Vendedor</label>
-                    <select class="form-select" id="vendedor" th:field="*{vendedor.id}" minlength="1" required>
-                        <option value=""></option>
-                        <option th:each="vendedor : ${vendedores}" th:value="${vendedor.id}"
-                            th:text="${vendedor.nombre}">
-                        </option>
-                    </select>
+                <!-- Tipo de cambio -->
+                <div class="col-12 col-md-2 mb-2">
+                    <label for="tipoCambio" class="form-label fw-bolder">Tipo de Cambio</label>
+                    <input type="number" step="0.01" class="form-control" id="tipoCambio" th:field="*{tipoCambio}"
+                        required>
                     <div class="invalid-feedback">
-                        Es necesario un vendedor
+                        Es necesario un tipo de cambio
                     </div>
                 </div>
+
+
+
+
+
+
             </div>
-            -->
+
+            <div class="row mb-2 ">
+
+                <!-- Selección de Cliente -->
+                <div class="col-12 col-md-3 mb-2">
+                    <label for="cliente" class="form-label fw-bolder">Cliente</label>
+                    <select class="form-select" id="cliente" th:field="*{cliente.id}" minlength="1" required>
+                        <option value=""></option>
+                        <option th:each="cliente : ${clientes}" th:value="${cliente.id}"
+                            th:text="${cliente.cuentaCorriente}">
+                        </option>
+                    </select>
+                </div>
 
                 <!-- Buscador de productos -->
-                <div class="mb-3">
+                <div class="col-12 col-md-4 mb-3">
                     <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
                     <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
                     <div id="resultadosBusqueda" class="list-group mt-2"></div>
                 </div>
 
-                <!-- Tabla de productos seleccionados -->
-                <div class="table-responsive mb-3">
-                    <label for="productos" class="form-label fw-bolder">Productos seleccionados</label>
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>Producto</th>
-                                <th>Precio Costo</th>
-                                <th>Cantidad L/KG</th>
-                                <th>Ganancia %</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="productosSeleccionados">
-                            <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
-                        </tbody>
-                    </table>
-                </div>
+            </div>
 
-                <button type="submit" class="btn btn-primary btn-lg col-1">Guardar</button>
+
+            <!-- Tabla de productos seleccionados -->
+            <div class="table-responsive mb-3">
+                <label for="productos" class="form-label fw-bolder">Productos seleccionados</label>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Producto</th>
+                            <th>Precio Costo</th>
+                            <th>Cantidad L/KG</th>
+                            <th>Ganancia %</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="productosSeleccionados">
+                        <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
+                    </tbody>
+                </table>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-lg col-1">Guardar</button>
 
 
 
