mejoras en las vistas

--- a/src/main/resources/templates/admin/listaNotasVentas.html
+++ b/src/main/resources/templates/admin/listaNotasVentas.html
@@ -30,7 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center me-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="nav nav-pills nav-fill">
                     <li class="nav-item ">
                         <a class="nav-link  fs-5 fw-bold text-dark" href="/admin/notasVentas">Notas de Venta</a>
                     </li>
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <div class="container mt-4">
-        <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Listado de Notas de Venta</h2>
+        <h2 class="h2 col-12 my-4 text-center fs-1 fw-bold text-dark text-opacity-75 ">Listado de Notas de Venta</h2>
         <table class="table table-hover table-bordered">
             <thead class="table table-warning">
                 <tr class="text-center text-bordered">
