--- a/src/main/resources/templates/admin/vendedorForm.html
+++ b/src/main/resources/templates/admin/vendedorForm.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center me-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="nav nav-pills nav-fill">
                     <li class="nav-item ">
                         <a class="nav-link  fs-5 fw-bold text-dark" href="/admin/notasVentas">Notas de Venta</a>
                     </li>
