--- a/src/main/resources/templates/vendedores/notaVentaForm.html
+++ b/src/main/resources/templates/vendedores/notaVentaForm.html
@@ -8,7 +8,7 @@
     <style>
         /* Ajuste personalizado para limitar el ancho y centrar el contenido */
         .custom-container {
-            max-width: 75%;
+            max-width: 90%;
             /* Ocupa el 80% del ancho de la pantalla grande */
             margin: 0 auto;
             /* Centrar el contenedor horizontalmente */
@@ -29,6 +29,15 @@
 
         body {
             background-color: whitesmoke;
+        }
+
+        .center-input {
+            display: block;
+            /* Para asegurarse que tome la alineación dentro de la celda */
+            margin: auto;
+            /* Centrará el input dentro de la celda */
+            width: 50%;
+            /* Puedes ajustar el ancho según prefieras */
         }
     </style>
 </head>
@@ -82,30 +91,20 @@
     </nav>
 
 
-    <div class="container custom-container my-4"> <!-- Añadimos la clase personalizada -->
-        <div class="row mb-4">
+    <div class="container custom-container my-4 text-dark text-opacity-75"> <!-- Añadimos la clase personalizada -->
+        <div class="row">
 
             <!--<img th:src="@{/images/LogoAgromatorrales.png}" alt="Descripción de la imagen" class="col-2 my-4 logo">-->
-            <h2 class="h2 col-12 my-4 text-lg-center fs-1 fw-bold text-dark text-opacity-80 ">Registrar Nota de Venta
+            <h2 class="h2 col-12 my-4 text-center fs-1 fw-bold text-dark text-opacity-75  ">Registrar Nota de Venta
             </h2>
             <!-- Centramos el título -->
         </div>
         <form th:action="@{/vendedor/notasVentas/guardar}" th:object="${notaVenta}" method="post"
             class="needs-validation" novalidate>
-            <div class="row mb-2">
-
-                <!-- Fecha de vencimiento -->
-                <div class="col-12 col-md-2 mb-2">
-                    <label for="vencimiento" class="form-label fw-bolder">Fecha de Vencimiento</label>
-                    <input type="date" class="form-control" id="vencimiento" th:field="*{vencimiento}"
-                        th:min="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
-                    <div class="invalid-feedback">
-                        Es necesaria una fecha de vencimiento
-                    </div>
-                </div>
+            <div class="row mb-2 d-flex justify-content-around">
 
                 <!-- Comprobante-->
-                <div class="col-12 col-md-2 mb-2">
+                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
                     <label for="comprobante" class="form-label fw-bolder">Comprobante</label>
                     <select class="form-select" id="comprobante" th:field="*{comprobante}" minlength="1" required>
                         <option value=""></option>
@@ -120,7 +119,7 @@
                 </div>
 
                 <!-- Forma de pago -->
-                <div class="col-12 col-md-2 mb-2">
+                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
                     <label for="formaDePago" class="form-label fw-bolder">Forma de Pago</label>
                     <select class="form-select" id="formaDePago" th:field="*{formaDePago}" minlength="1" required>
                         <option value=""></option>
@@ -135,7 +134,7 @@
                 </div>
 
                 <!-- IVA -->
-                <div class="col-12 col-md-2 mb-2">
+                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
                     <label for="iva" class="form-label fw-bolder">IVA</label>
                     <select class="form-select" id="iva" th:field="*{IVA}" minlength="1" required>
                         <option value=""></option>
@@ -149,8 +148,8 @@
                 </div>
 
                 <!-- Interés Mensual -->
-                <div class="col-12 col-md-2 mb-2">
-                    <label for="interesMensual" class="form-label fw-bolder">Interés Mensual %</label>
+                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
+                    <label for="interesMensual" class="form-label fw-bolder">Interés%</label>
                     <input type="number" step="0.01" class="form-control" id="interesMensual"
                         th:field="*{interesMensual}" required>
                     <div class="invalid-feedback">
@@ -159,20 +158,17 @@
                 </div>
 
                 <!-- Tipo de cambio -->
-                <div class="col-12 col-md-2 mb-2">
-                    <label for="tipoCambio" class="form-label fw-bolder">Tipo de Cambio</label>
+                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
+                    <label for="tipoCambio" class="form-label fw-bolder">Tipo Cambio</label>
                     <input type="number" step="0.01" class="form-control" id="tipoCambio" th:field="*{tipoCambio}"
                         required>
                     <div class="invalid-feedback">
                         Es necesario un tipo de cambio
                     </div>
                 </div>
-            </div>
-
-            <div class="row mb-2 ">
 
                 <!-- Selección de Cliente -->
-                <div class="col-12 col-md-3 mb-2">
+                <div class="col-12 col-md-3 col-xl-3 mb-2 text-center fs-5">
                     <label for="cliente" class="form-label fw-bolder">Cliente</label>
                     <select class="form-select" id="cliente" th:field="*{cliente.id}" minlength="1" required>
                         <option value=""></option>
@@ -182,37 +178,56 @@
                     </select>
                 </div>
 
-                <!-- Buscador de productos -->
-                <div class="col-12 col-md-4 mb-3">
-                    <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
-                    <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
-                    <div id="resultadosBusqueda" class="list-group mt-2"></div>
+
+
+                <!-- Fecha de vencimiento -->
+                <div class="col-12 col-md-3 col-xl-3 mb-2 text-center fs-5">
+                    <label for="vencimiento" class="form-label fw-bolder">Vencimiento</label>
+                    <input type="date" class="form-control" id="vencimiento" th:field="*{vencimiento}"
+                        th:min="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
+                    <div class="invalid-feedback">
+                        Es necesaria una fecha de vencimiento
+                    </div>
                 </div>
+            
+
+            <!-- Buscador de productos -->
+            <div class="col-12 col-md-4 col-xl-4 mb-3 text-center fs-5">
+                <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
+                <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
+                <div id="resultadosBusqueda" class="list-group mt-2 text-start"></div>
+            </div>
+        </div>
+            <div class="row mb-2 d-flex justify-content-around">
+
+
 
             </div>
 
 
             <!-- Tabla de productos seleccionados -->
-            <div class="table-responsive mb-3">
-                <label for="productos" class="form-label fw-bolder">Productos seleccionados</label>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Producto</th>
-                            <th>Precio Costo</th>
-                            <th>Cantidad L/KG</th>
-                            <th>Ganancia %</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody id="productosSeleccionados">
-                        <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
-                    </tbody>
-                </table>
+            <div class="d-flex justify-content-center">
+
+                <label for="productos" class="form-label fw-bolder fs-2 mx-auto mt-4 mb-4">Productos
+                    seleccionados</label>
             </div>
-
-            <button type="submit" class="btn btn-primary btn-lg col-1">Guardar</button>
-
+            <table class="table table-striped mx-auto text-center fs-5 sm-2" style="width: 70%;">
+                <thead>
+                    <tr class="text-center">
+                        <th>Producto</th>
+                        <th>Precio Costo</th>
+                        <th>Cantidad L/KG</th>
+                        <th>Ganancia %</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody id="productosSeleccionados">
+                    <!-- Aquí se añadirán los productos seleccionados dinámicamente -->
+                </tbody>
+            </table>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary btn-lg col-1 mx-auto">Guardar</button>
+            </div>
 
 
         </form>
@@ -254,6 +269,7 @@
             }
         });
 
+        let productoIndex = 0;
         // Añadir producto a la tabla de productos seleccionados
         $('#resultadosBusqueda').on('click', 'a', function (e) {
             e.preventDefault();
@@ -270,13 +286,15 @@
             console.log("ID del producto seleccionado: " + idProducto);
             // Añadir fila con los datos del producto
             let nuevaFila = `
-        <tr data-id="${idProducto}">
-            <td>${nombreProducto}</td>
-            <td><input type="number" class="form-control" name="detalles[${productoIndex}].precioCosto" step="0.01" required></td>
-            <td><input type="number" class="form-control" name="detalles[${productoIndex}].cantidad" step="0.01" required></td>
-            <td><input type="number" class="form-control" name="detalles[${productoIndex}].ganancia" step="0.01" required></td>
-            <td><button type="button" class="btn btn-danger btn-sm eliminarProducto">Eliminar</button></td>
+        <tr data-id="${idProducto}" class="text-center">
+            
+            <td class="fw-semibold">${nombreProducto}</td>
+            <td ><input type="number" class="form-control center-input" name="detalles[${productoIndex}].precioCosto" step="0.01" required></td>
+            <td ><input type="number" class="form-control center-input" name="detalles[${productoIndex}].cantidad" step="0.01" required></td>
+            <td ><input type="number" class="form-control center-input" name="detalles[${productoIndex}].ganancia" step="0.01" required></td>
+            <td ><button type="button" class="btn btn-danger btn-sm eliminarProducto">Eliminar</button></td>
             <input type="hidden" name="detalles[${productoIndex}].producto.id" value="${idProducto}">
+            
         </tr>
     `;
             $('#productosSeleccionados').append(nuevaFila);
@@ -311,6 +329,8 @@
             // Actualizar el índice para el próximo producto a agregar
             productoIndex = $('#productosSeleccionados tr').length;
         }
+
+
 
 
     </script>
