--- a/src/main/resources/templates/vendedores/clientesForm.html
+++ b/src/main/resources/templates/vendedores/clientesForm.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png"
+            <a class="navbar-brand" href="/vendedor/notasVentas"><img src="/images/logo.png"
                     alt="Logo"><Strong>NotasVentas</Strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,18 +68,13 @@
         <form th:action="@{/vendedor/clientes/guardar}" th:object="${cliente}" method="post" class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-4">
-                    <div class="mb-2 text-start pb-3">
-                        
-                        <label for="cuentaCorriente" class="form-label fw-bold fs-5">Cuenta Corriente</label>
+                    <div class="form-floating mb-2 text-start pb-3">
                         <input type="text" class="form-control" id="cuentaCorriente" th:field="*{cuentaCorriente}"
                         placeholder="Cuenta corriente" required>
+                        <label for="cuentaCorriente" class="form-label">Cuenta Corriente</label>
                     </div>
-                    <div class="mb-2 text-start pb-3">
-                        <label for="email" class="form-label fw-bold fs-5">Email</label>
-                        <input type="text" class="form-control" id="email" th:field="*{email}" placeholder="Email" required>
-                    </div>
-                    <div class="mb-3 pb-4 col-4 ">
-                        <button type="submit" class="btn btn-lg btn-primary w-100">Guardar</button>
+                    <div class="mb-2 pb-4 col-4 ">
+                        <button type="submit" class="btn btn-lg btn-primary ">Guardar</button>
                     </div>
                 </div>
             </div>
