--- a/src/main/resources/templates/vendedores/notaVentaForm.html
+++ b/src/main/resources/templates/vendedores/notaVentaForm.html
@@ -18,12 +18,17 @@
             width: 35px;
             height: 21px;
         }
-
-
         @media (max-width: 768px) {
             .custom-container {
                 max-width: 100%;
-                /* En pantallas pequeñas, ocupa todo el ancho */
+            }
+            table{
+                width: 100%;
+            }
+            .center-input{
+                width: 100%;
+                margin: 0;
+                min-width: 70px;
             }
         }
 
@@ -43,69 +48,72 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/admin/notasVentas"><img src="/images/logo.png"
+    
+        <nav class="navbar navbar-expand-lg bg-dark bg-opacity-25 text-lg-center w-100">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/vendedor/notasVentas"><img src="/images/logo.png"
                     alt="Logo"><Strong>NotasVentas</Strong></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center me-5 pe-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link fs-5 fw-bold text-dark" href="/productos/create">Productos</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center me-5 pe-5" id="navbarNavDropdown">
+                    <ul class="nav nav-pills nav-fill">
+                        <li class="nav-item">
+                            <a class="nav-link fs-5 fw-bold text-dark" href="/productos/create">Productos</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Clientes
                         </a>
                         <ul class="dropdown-menu bg-dark-subtle">
                             <li><a class="dropdown-item fs-6 fw-bold text-dark"
-                                    href="/vendedor/clientes/crear">Nuevo</a></li>
-                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/clientes">Listar</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
+                                href="/vendedor/clientes/crear">Nuevo</a></li>
+                                
+                                <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/clientes">Listar</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle fs-5 fw-bold text-dark" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Notas de Venta
                         </a>
                         <ul class="dropdown-menu bg-dark-subtle">
                             <li><a class="dropdown-item fs-6 fw-bold text-dark"
-                                    href="/vendedor/notasVentas/crear">Nuevo</a></li>
-                            <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/notasVentas">Listar</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                                href="/vendedor/notasVentas/crear">Nuevo</a></li>
+                                
+                                <li><a class="dropdown-item fs-6 fw-bold text-dark" href="/vendedor/notasVentas">Listar</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Botón de salir alineado a la derecha -->
+                <form class="d-flex ms-auto me-3" sec:authorize="isAuthenticated()" method="post" action="/logout">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                    <button type="submit" class="btn btn-danger fw-semibold text-light">Salir</button>
+                </form>
             </div>
-            <!-- Botón de salir alineado a la derecha -->
-            <form class="d-flex ms-auto me-3" sec:authorize="isAuthenticated()" method="post" action="/logout">
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <button type="submit" class="btn btn-danger fw-semibold text-light">Salir</button>
-            </form>
-        </div>
-    </nav>
-
+        </nav>
+    
+        
 
     <div class="container custom-container my-4 text-dark text-opacity-75"> <!-- Añadimos la clase personalizada -->
-        <div class="row">
+        <div class="row mb-5">
 
             <!--<img th:src="@{/images/LogoAgromatorrales.png}" alt="Descripción de la imagen" class="col-2 my-4 logo">-->
-            <h2 class="h2 col-12 my-4 text-center fs-1 fw-bold text-dark text-opacity-75  ">Registrar Nota de Venta
-            </h2>
+            <h3 class="h2 col-12 my-4 text-center fs-2 fw-bold text-dark text-opacity-75  ">Registrar Nota de Venta
+            </h3>
             <!-- Centramos el título -->
         </div>
         <form th:action="@{/vendedor/notasVentas/guardar}" th:object="${notaVenta}" method="post"
             class="needs-validation" novalidate>
-            <div class="row mb-2 d-flex justify-content-around">
-
+            <div class="row mb-2 d-flex justify-content-around text-center">
                 <!-- Comprobante-->
-                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
-                    <label for="comprobante" class="form-label fw-bolder">Comprobante</label>
+                <div class="form-floating col-12 col-md-3 col-xl-2 mb-5">
+                    
                     <select class="form-select" id="comprobante" th:field="*{comprobante}" minlength="1" required>
                         <option value=""></option>
                         <option value="FACTURA">Factura</option>
@@ -113,14 +121,14 @@
                         <option value="NOTACREDITO">Nota de Crédito</option>
                         <option value="DEBITOINTERNO">Débito Interno</option>
                     </select>
+                    <label for="comprobante" class="form-label ms-2 mb-1">Comprobante</label> 
                     <div class="invalid-feedback">
                         Es necesario un comprobante
                     </div>
                 </div>
 
                 <!-- Forma de pago -->
-                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
-                    <label for="formaDePago" class="form-label fw-bolder">Forma de Pago</label>
+                <div class="form-floating col-12 col-md-3 col-xl-2 mb-5 ">
                     <select class="form-select" id="formaDePago" th:field="*{formaDePago}" minlength="1" required>
                         <option value=""></option>
                         <option value="EFECTIVO">Efectivo</option>
@@ -128,36 +136,39 @@
                         <option value="CANJECEREAL">Canje de cereal</option>
                         <option value="TARJETACREDITO">Tarjeta de crédito</option>
                     </select>
+                    <label for="formaDePago" class="form-label ms-2">Forma de Pago</label>
                     <div class="invalid-feedback">
                         Es necesario un tipo de cambio
                     </div>
                 </div>
 
                 <!-- IVA -->
-                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
-                    <label for="iva" class="form-label fw-bolder">IVA</label>
+                <div class=" form-floating col-md-3 col-xl-2 mb-5">
+                    
                     <select class="form-select" id="iva" th:field="*{IVA}" minlength="1" required>
                         <option value=""></option>
                         <option value="0">0%</option>
                         <option value="10.5">10.5%</option>
                         <option value="21">21%</option>
                     </select>
+                    <label for="iva" class="form-label ms-2">IVA</label>
                     <div class="invalid-feedback">
                         Es necesario un IVA
                     </div>
                 </div>
 
                 <!-- Interés Mensual -->
-                <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
-                    <label for="interesMensual" class="form-label fw-bolder">Interés%</label>
+                <div class="form-floating col-12 col-md-3 col-xl-2 mb-5">
+                    
                     <input type="number" step="0.01" class="form-control" id="interesMensual"
                         th:field="*{interesMensual}" required>
+                        <label for="interesMensual" class="form-label ms-2">Porcentaje Interés</label>
                     <div class="invalid-feedback">
                         Es necesario un interés mensual
                     </div>
                 </div>
 
-                <!-- Tipo de cambio -->
+                <!-- Tipo de cambio 
                 <div class="col-12 col-md-3 col-xl-2 mb-2 text-center fs-5">
                     <label for="tipoCambio" class="form-label fw-bolder">Tipo Cambio</label>
                     <input type="number" step="0.01" class="form-control" id="tipoCambio" th:field="*{tipoCambio}"
@@ -165,26 +176,28 @@
                     <div class="invalid-feedback">
                         Es necesario un tipo de cambio
                     </div>
-                </div>
+                </div>-->
 
                 <!-- Selección de Cliente -->
-                <div class="col-12 col-md-3 col-xl-3 mb-2 text-center fs-5">
-                    <label for="cliente" class="form-label fw-bolder">Cliente</label>
+                <div class="form-floating col-md-3 col-xl-2 mb-5">
+                    
                     <select class="form-select" id="cliente" th:field="*{cliente.id}" minlength="1" required>
                         <option value=""></option>
                         <option th:each="cliente : ${clientes}" th:value="${cliente.id}"
                             th:text="${cliente.cuentaCorriente}">
                         </option>
                     </select>
+                    <label for="cliente" class="form-label ms-2">Cliente</label>
                 </div>
 
 
 
                 <!-- Fecha de vencimiento -->
-                <div class="col-12 col-md-3 col-xl-3 mb-2 text-center fs-5">
-                    <label for="vencimiento" class="form-label fw-bolder">Vencimiento</label>
+                <div class="form-floating col-md-3 col-xl-3 mb-2">
+                    
                     <input type="date" class="form-control" id="vencimiento" th:field="*{vencimiento}"
                         th:min="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" required>
+                        <label for="vencimiento" class="form-label ms-2">Vencimiento</label>
                     <div class="invalid-feedback">
                         Es necesaria una fecha de vencimiento
                     </div>
@@ -192,26 +205,19 @@
             
 
             <!-- Buscador de productos -->
-            <div class="col-12 col-md-4 col-xl-4 mb-3 text-center fs-5">
-                <label for="buscarProducto" class="form-label fw-bolder">Buscar Producto</label>
+            <div class="form-floating col-md-4 col-xl-4 mb-3">
                 <input type="text" id="buscarProducto" class="form-control" placeholder="Escribe para buscar...">
+                <label for="buscarProducto" class="form-label ms-2">Escribe para buscar Producto</label>
                 <div id="resultadosBusqueda" class="list-group mt-2 text-start"></div>
             </div>
         </div>
-            <div class="row mb-2 d-flex justify-content-around">
-
-
-
-            </div>
-
-
             <!-- Tabla de productos seleccionados -->
             <div class="d-flex justify-content-center">
 
-                <label for="productos" class="form-label fw-bolder fs-2 mx-auto mt-4 mb-4">Productos
+                <label for="productos" class="form-label fw-bolder fs-4 mx-auto mt-4 mb-4">Productos
                     seleccionados</label>
             </div>
-            <table class="table table-striped mx-auto text-center fs-5 sm-2" style="width: 70%;">
+            <table class="table table-resposive table-striped mx-auto text-center ">
                 <thead>
                     <tr class="text-center">
                         <th>Producto</th>
@@ -226,7 +232,7 @@
                 </tbody>
             </table>
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary btn-lg col-1 mx-auto">Guardar</button>
+                <button type="submit" class="btn btn-primary btn-lg  mx-auto">Guardar</button>
             </div>
 
 
@@ -240,7 +246,7 @@
         // Buscar productos dinámicamente
         $('#buscarProducto').on('input', function () {
             let query = $(this).val();
-            if (query.length > 2) {
+            if (query.length > 0) {
                 $.ajax({
                     url: '/productos/buscar', // Ruta donde procesarás la búsqueda de productos
                     method: 'GET',
